# ia_2025

./: pyproject.toml  requirements.txt
src/aspirador/: __main__.py  agent.py
src/gridworld/: __main__.py
src/monedes/: __main__.py  agent.py
src/practica/: __main__.py  agent_A_Estrella.py  agent_amplada.py  agent_minimax.py  estat.py  joc.py
src/quiques/: __main__.py  agent_amplada.py  agent_profunditat.py  estat.py
src/tictac/: agent.py  estat.py
