[project]
name = "ia2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ialib",
    "numpy==2.3.3",
    "pip==25.2",
    "pygame>=2.6.1",
    "pyinstaller==6.16.0",
    "pyopengl==3.1.10",
    "typer==0.19.2",
]

[project.scripts]
run-task = "runner.cli:app"

[tool.uv.sources]
ialib = { git = "https://github.com/miquelmn/iaLib" }
