[project]
name = "ia2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ialib>=0.2.3",
    "numpy==2.3.2",
    "pygame>=2.6.1",
    "pyinstaller==6.14.2",
    "pyopengl==3.1.9",
    "scipy>=1.16.2",
    "setuptools==78.1.1",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "pandas>=2.3.3"
]

[project.scripts]
run-task = "runner.cli:app"

[tool.uv.sources]
ialib = { git = "https://github.com/miquelmn/iaLib" }
